--- a/css_4/style.css
+++ b/css_4/style.css
@@ -1001,7 +1001,7 @@ main .bg {
 .right .room .livelist ul li .games {
   font-size: 13px;
   font-weight: bold;
-  color: #1b1b1b;
+  color: #678ac2;
   position: absolute;
   right: 60px;
   top: 0px;
