--- a/scss_2/_type.scss
+++ b/scss_2/_type.scss
@@ -14,7 +14,7 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: #ffffff;
+        background: #ededed;
         border-radius: 10px;
     }
 
