--- a/scss_4/_rightside.scss
+++ b/scss_4/_rightside.scss
@@ -351,7 +351,7 @@
                     .games {
                         font-size: 13px;
                         font-weight: bold;
-                        color: #1b1b1b;
+                        color: #678ac2;
                         position: absolute;
                         right: 60px;
                         top: 0px;
