--- a/scss_5/_rightside.scss
+++ b/scss_5/_rightside.scss
@@ -452,7 +452,7 @@
                     .games {
                         font-size: 13px;
                         font-weight: bold;
-                        color: #1b1b1b;
+                        color: #de1e30;
                         position: absolute;
                         right: 60px;
                         top: 0px;
