--- a/css/style.css
+++ b/css/style.css
@@ -990,7 +990,7 @@ main .bg {
   height: 0px;
   border-style: solid;
   border-width: 7px 0px 7px 8px;
-  border-color: transparent #b2b2b2;
+  border-color: transparent #57ed22;
   right: 25px;
   top: 8px;
   transition: 0.3s all;
@@ -1004,7 +1004,7 @@ main .bg {
   float: right;
   font-size: 13px;
   font-weight: bold;
-  color: #e4e4e4;
+  color: #57ed22;
   margin: 2px 60px 0px 0px;
 }
 .right .room .livelist ul li .innerList {
