--- a/css_2/style.css
+++ b/css_2/style.css
@@ -890,8 +890,8 @@ main .bg {
 .right .room .twobut button {
   width: 49.5%;
   height: 100%;
-  background: #294282;
-  color: #ffffff;
+  background: #dbdbdb;
+  color: #595959;
   font-size: 14px;
   float: left;
   margin-right: 1%;
@@ -911,8 +911,8 @@ main .bg {
 .right .room .onebut button {
   width: 100%;
   height: 100%;
-  background: #294282;
-  color: #ffffff;
+  background: #ffffff;
+  color: #294282;
   font-size: 14px;
   border-radius: 3px 3px 0px 0px;
 }
@@ -934,7 +934,7 @@ main .bg {
   border-radius: 10px;
 }
 .right .room .livelist::-webkit-scrollbar-thumb {
-  background: linear-gradient(to right, #ffab00 0%, #ff4802 100%);
+  background: linear-gradient(to bottom, #ffab00 0%, #ff4802 100%);
   border-radius: 10px;
 }
 .right .room .livelist.open {
@@ -962,7 +962,7 @@ main .bg {
   color: #356bf7;
 }
 .right .room .livelist ul li.active {
-  background: #f7f7f7;
+  background: #ffffff;
   height: auto;
   position: -webkit-sticky;
   position: sticky;
@@ -988,7 +988,7 @@ main .bg {
   height: 0px;
   border-style: solid;
   border-width: 7px 0px 7px 8px;
-  border-color: transparent #8d8d8d;
+  border-color: transparent #356bf7;
   right: 25px;
   top: 8px;
   transition: 0.3s all;
@@ -1006,7 +1006,7 @@ main .bg {
 .right .room .livelist ul li .games {
   font-size: 13px;
   font-weight: bold;
-  color: #454545;
+  color: #356bf7;
   position: absolute;
   right: 60px;
   top: 0px;
@@ -1014,11 +1014,10 @@ main .bg {
 .right .room .livelist ul li .innerList {
   width: 96%;
   height: 70px;
-  background: #ffffff;
+  background: #7787af;
   position: relative;
   cursor: default;
   border-radius: 5px;
-  box-shadow: 0px 0px 5px 0px #00000049;
   margin: 0px auto 10px;
 }
 .right .room .livelist ul li .innerList:nth-of-type(1) {
@@ -1032,11 +1031,11 @@ main .bg {
   top: 50%;
   transform: translateY(-50%);
   font-size: 12px;
-  color: #454545;
+  color: #ffffff;
 }
 .right .room .livelist ul li .innerList p span {
   font-weight: bold;
-  color: #356bf7;
+  color: #ffffff;
 }
 .right .room .livelist ul li .innerList p span .situation {
   font-weight: normal;
@@ -1055,7 +1054,7 @@ main .bg {
   width: 40px;
   height: 19px;
   top: -1px;
-  left: -10px;
+  left: -11px;
   background: url("../images/liveBg.png") no-repeat;
   z-index: -1;
 }
@@ -4515,7 +4514,7 @@ main .bg {
   background-color: transparent;
 }
 .middle::-webkit-scrollbar-track {
-  background: #ffffff;
+  background: #ededed;
   border-radius: 10px;
 }
 .middle::-webkit-scrollbar-thumb {
