--- a/css_5/style.css
+++ b/css_5/style.css
@@ -1106,7 +1106,7 @@ main .bg {
 .right .room .livelist ul li .games {
   font-size: 13px;
   font-weight: bold;
-  color: #1b1b1b;
+  color: #de1e30;
   position: absolute;
   right: 60px;
   top: 0px;
