--- a/css_2/style.css
+++ b/css_2/style.css
@@ -709,7 +709,7 @@ main .bg {
   height: 850px;
   margin-left: 10px;
   float: left;
-  overflow: hidden;
+  overflow: auto;
   position: relative;
   z-index: 6;
   scrollbar-width: thin;
@@ -814,7 +814,6 @@ main .bg {
   height: auto;
   background: #ffffff;
   text-align: center;
-  margin-bottom: 10px;
   box-shadow: 0px 2px 5px 0px #00000049;
 }
 .right .liveWindow .title {
@@ -874,7 +873,6 @@ main .bg {
 .right .room {
   width: 100%;
   height: auto;
-  margin-top: 5px;
 }
 .right .room .twobut {
   width: 100%;
@@ -964,10 +962,6 @@ main .bg {
 .right .room .livelist ul li.active {
   background: #ffffff;
   height: auto;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-  z-index: 2;
 }
 .right .room .livelist ul li.active::before {
   transform: rotate(90deg);
@@ -1070,7 +1064,7 @@ main .bg {
   color: #356bf7;
 }
 .right .room .livelist ul li .innerList p button:hover, .right .room .livelist ul li .innerList p button:active, .right .room .livelist ul li .innerList p button.active {
-  background: #356bf7;
+  background: #f96262;
   color: #ffffff;
 }
 .right .room .bettingStatus {
@@ -1106,6 +1100,9 @@ main .bg {
   border-radius: 3px;
   margin: 0px 0px 10px 10px;
   background: #ffffff;
+}
+.playBoard:last-child {
+  margin-bottom: 40px;
 }
 .playBoard.index_page tr:nth-of-type(2):hover, .playBoard.result_page tr:nth-of-type(2):hover {
   border-color: transparent transparent #356bf7 transparent;
