--- a/scss_5/_rightside.scss
+++ b/scss_5/_rightside.scss
@@ -4,7 +4,7 @@
     height: 850px;
     margin: 15px 0px 0px 10px;
     float: left;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
     z-index: 6;
     scrollbar-width: thin;
@@ -152,18 +152,7 @@
         height: auto;
         background: #ffffff;
         text-align: center;
-        margin-bottom: 10px;
         position: relative;
-
-        &::before {
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 10px;
-            background: #f0f0f0;
-            left: 0px;
-            bottom: -10px;
-        }
 
         .title {
             background: #ffffff;
@@ -261,9 +250,9 @@
 
     //下大框
     .room {
-        width: 95%;
+        width: 96%;
         height: auto;
-        margin: 20px auto;
+        margin: 10px auto;
 
         //切換按鈕
         .twobut {
@@ -407,9 +396,6 @@
                         height: auto;
                         border-color: #ffffff;
                         background: #ffffff;
-                        position: sticky;
-                        top: 5px;
-                        z-index: 2;
 
                         &::before {
                             transform: rotate(90deg);
