--- a/scss/_rightside.scss
+++ b/scss/_rightside.scss
@@ -11,17 +11,17 @@
     background: #242424;
 
     &::-webkit-scrollbar {
-        width: 8px;
+        width: 5px;
         background-color: transparent;
     }
 
     &::-webkit-scrollbar-track {
-        background: #f1f1f1;
+        background: #121212;
         border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: #b9becf;
+        background: #606360;
         border-radius: 10px;
     }
     
