--- a/scss/_myself.scss
+++ b/scss/_myself.scss
@@ -1023,7 +1023,7 @@
 .changePasswordWindow {
     display: none;
     position: fixed;
-    width: 350px;
+    width: 390px;
     height: auto;
     left: 50%;
     top: 20%;
@@ -1094,21 +1094,21 @@
         height: 160px;
         background: #242424;
         border-radius: 0px 0px 3px 3px;
-        padding: 20px 0px;
+        padding: 30px 0px;
         border: solid 1px #3e8a13;
         border-top: none;
 
         div {
-            width: 95%;
+            width: 81%;
             height: 50px;
-            float: left;
+            margin: 0px auto;
             position: relative;
 
             &:last-child {
-                width: 500px;
+                width: auto;
                 left: 50%;
                 transform: translateX(-50%);
-                margin-top: 20px;
+                margin-top: 15px;
                 text-align: center;
             }
 
@@ -1130,7 +1130,6 @@
             span {
                 line-height: 40px;
                 color: #c8c8c8;
-                padding-left: 15px;
             }
 
             button {
