--- a/css_3/style.css
+++ b/css_3/style.css
@@ -7960,7 +7960,7 @@ main .bg {
 .changePasswordWindow {
   display: none;
   position: absolute;
-  width: 350px;
+  width: 390px;
   height: 360px;
   left: 50%;
   top: 50%;
@@ -8021,21 +8021,21 @@ main .bg {
   height: 160px;
   background: #747474;
   border-radius: 0px 0px 3px 3px;
-  padding: 20px 0px;
+  padding: 30px 0px;
   border: solid 1px #a2a2a2;
   border-top: none;
 }
 .changePasswordWindow .box div {
-  width: 95%;
+  width: 81%;
   height: 50px;
-  float: left;
+  margin: 0px auto;
   position: relative;
 }
 .changePasswordWindow .box div:last-child {
-  width: 500px;
+  width: auto;
   left: 50%;
   transform: translateX(-50%);
-  margin-top: 20px;
+  margin-top: 15px;
   text-align: center;
 }
 .changePasswordWindow .box div input {
@@ -8050,7 +8050,6 @@ main .bg {
 .changePasswordWindow .box div span {
   line-height: 40px;
   color: #fff;
-  padding-left: 15px;
 }
 .changePasswordWindow .box div button {
   width: 152px;
