--- a/css_4/style.css
+++ b/css_4/style.css
@@ -8309,7 +8309,7 @@ main .bg {
 .changePasswordWindow {
   display: none;
   position: fixed;
-  width: 350px;
+  width: 390px;
   height: auto;
   left: 50%;
   top: 30%;
@@ -8369,19 +8369,19 @@ main .bg {
   height: 160px;
   background: #ededed;
   border-radius: 0px 0px 3px 3px;
-  padding: 20px 0px;
+  padding: 30px 0px;
 }
 .changePasswordWindow .box div {
-  width: 95%;
+  width: 81%;
   height: 50px;
-  float: left;
+  margin: 0px auto;
   position: relative;
 }
 .changePasswordWindow .box div:last-child {
-  width: 500px;
+  width: auto;
   left: 50%;
   transform: translateX(-50%);
-  margin-top: 20px;
+  margin-top: 15px;
   text-align: center;
 }
 .changePasswordWindow .box div input {
@@ -8398,7 +8398,6 @@ main .bg {
 .changePasswordWindow .box div span {
   line-height: 40px;
   color: #1b1b1b;
-  padding-left: 15px;
 }
 .changePasswordWindow .box div button {
   width: 152px;
