--- a/scss_3/_myself.scss
+++ b/scss_3/_myself.scss
@@ -991,7 +991,7 @@
 .changePasswordWindow {
     display: none;
     position: absolute;
-    width: 350px;
+    width: 390px;
     height: 360px;
     left: 50%;
     top: 50%;
@@ -1061,21 +1061,21 @@
         height: 160px;
         background: #747474;
         border-radius: 0px 0px 3px 3px;
-        padding: 20px 0px;
+        padding: 30px 0px;
         border: solid 1px #a2a2a2;
         border-top: none;
 
         div {
-            width: 95%;
+            width: 81%;
             height: 50px;
-            float: left;
+            margin: 0px auto;
             position: relative;
 
             &:last-child {
-                width: 500px;
+                width: auto;
                 left: 50%;
                 transform: translateX(-50%);
-                margin-top: 20px;
+                margin-top: 15px;
                 text-align: center;
             }
 
@@ -1092,7 +1092,6 @@
             span {
                 line-height: 40px;
                 color: #fff;
-                padding-left: 15px;
             }
 
             button {
