--- a/scss_5/_rightside.scss
+++ b/scss_5/_rightside.scss
@@ -250,9 +250,8 @@
 
     //下大框
     .room {
-        width: 96%;
+        width: 100%;
         height: auto;
-        margin: 10px auto;
 
         //切換按鈕
         .twobut {
@@ -270,15 +269,15 @@
             button {
                 width: 49.5%;
                 height: 100%;
-                background: #f4f4f4;
-                color: #7f7f7f;
+                background: #dadada;
+                color: #676767;
                 font-size: 14px;
                 float: left;
                 border-radius: 3px 3px 0px 0px;
 
                 &:hover,&:active,&.active {
-                    background: #e6e6e6;
-                    color: #393939;
+                    background: #ffffff;
+                    color: #000000;
                 }
 
                 &:last-child {
@@ -333,6 +332,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
+            background: #ffffff;
 
             &::-webkit-scrollbar {
                 width: 5px;
@@ -527,7 +527,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #e6e6e6;
+            background: #ffffff;
 
             &::-webkit-scrollbar {
                 width: 5px;
