--- a/css_5/style.css
+++ b/css_5/style.css
@@ -570,8 +570,9 @@ main .bg {
   border-bottom: solid 1px #ebebeb;
 }
 .left.mine ul li:hover a, .left.mine ul li:active a, .left.mine ul li.active a {
-  background: #e3e3e3;
+  background: #f1f1f1;
   color: #df1e31;
+  font-weight: bold;
 }
 .left.mine ul li a {
   border: solid 1px transparent;
@@ -604,8 +605,9 @@ main .bg {
   font-size: 20px;
 }
 .left ul li:hover a {
-  background: #e3e3e3;
+  background: #f1f1f1;
   color: #de1e30;
+  font-weight: bold;
 }
 .left ul li:hover a .total {
   color: #de1e30;
@@ -614,8 +616,9 @@ main .bg {
   display: block;
 }
 .left ul li:active a, .left ul li.active a {
-  background: #e3e3e3;
+  background: #f1f1f1;
   color: #de1e30;
+  font-weight: bold;
 }
 .left ul li:active a .total, .left ul li.active a .total {
   color: #de1e30;
@@ -728,7 +731,7 @@ main .bg {
   height: 850px;
   margin: 15px 0px 0px 10px;
   float: left;
-  overflow: auto;
+  overflow: hidden;
   position: relative;
   z-index: 6;
   scrollbar-width: thin;
@@ -935,8 +938,9 @@ main .bg {
   background-size: cover;
 }
 .right .room {
-  width: 100%;
+  width: 95%;
   height: auto;
+  margin: 10px auto;
 }
 .right .room .twobut {
   width: 100%;
@@ -952,15 +956,15 @@ main .bg {
 .right .room .twobut button {
   width: 49.5%;
   height: 100%;
-  background: #dadada;
-  color: #676767;
+  background: #f4f4f4;
+  color: #7f7f7f;
   font-size: 14px;
   float: left;
   border-radius: 3px 3px 0px 0px;
 }
 .right .room .twobut button:hover, .right .room .twobut button:active, .right .room .twobut button.active {
-  background: #ffffff;
-  color: #000000;
+  background: #e6e6e6;
+  color: #393939;
 }
 .right .room .twobut button:last-child {
   float: right;
@@ -1007,7 +1011,6 @@ main .bg {
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: thin;
-  background: #ffffff;
 }
 .right .room .livelist::-webkit-scrollbar {
   width: 5px;
@@ -1047,7 +1050,7 @@ main .bg {
 }
 .right .room .livelist ul li:hover .gameName, .right .room .livelist ul li:active .gameName {
   color: #de1e30;
-  background: #e6e6e6;
+  background: #f1f1f1;
 }
 .right .room .livelist ul li:hover .games, .right .room .livelist ul li:active .games {
   color: #de1e30;
@@ -1056,13 +1059,20 @@ main .bg {
   height: auto;
   border-color: #ffffff;
   background: #ffffff;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 5px;
+  z-index: 2;
+}
+.right .room .livelist ul li.active:hover .gameName {
+  background: none;
 }
 .right .room .livelist ul li.active::before {
   transform: rotate(90deg);
 }
 .right .room .livelist ul li.active .gameName {
   color: #de1e30;
-  background: #e6e6e6;
+  box-shadow: 0px 0px 0px 1px #df1e31 inset;
 }
 .right .room .livelist ul li.active .games {
   color: #de1e30;
@@ -1092,7 +1102,7 @@ main .bg {
 .right .room .livelist ul li .games {
   font-size: 13px;
   font-weight: bold;
-  color: #de1e30;
+  color: #1b1b1b;
   position: absolute;
   right: 60px;
   top: 0px;
@@ -1168,7 +1178,7 @@ main .bg {
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: thin;
-  background: #ffffff;
+  background: #e6e6e6;
 }
 .right .room .bettingStatus::-webkit-scrollbar {
   width: 5px;
@@ -1194,9 +1204,6 @@ main .bg {
   margin: 0px 0px 15px 20px;
   background: #ffffff;
   position: relative;
-}
-.playBoard:last-child {
-  margin-bottom: 40px;
 }
 .playBoard::before {
   content: "";
@@ -1251,6 +1258,9 @@ main .bg {
 }
 .playBoard tr:hover td button, .playBoard tr:active td button, .playBoard tr.active td button {
   background: #ffffff;
+}
+.playBoard tr:hover td button.disable, .playBoard tr:active td button.disable, .playBoard tr.active td button.disable {
+  background: #efefef;
 }
 .playBoard tr th {
   color: #333333;
@@ -2312,10 +2322,9 @@ main .bg {
   overflow: hidden;
   margin: 8px auto 0px;
   border-collapse: inherit;
-  border: solid 1px #c5c5c5;
 }
 .bettingBoard:last-child {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .bettingBoard.fail {
   position: relative;
@@ -2330,6 +2339,12 @@ main .bg {
 .bettingBoard.fail tr td.failRemind {
   display: block;
 }
+.bettingBoard tr:nth-of-type(1) td:nth-of-type(1) {
+  color: #a9a9a9;
+}
+.bettingBoard tr:nth-of-type(2) td:nth-of-type(1) {
+  color: #333333;
+}
 .bettingBoard tr td {
   width: 50%;
   height: auto;
@@ -2339,7 +2354,7 @@ main .bg {
   border-width: 0px 0px 1px 0px;
   border-color: #e6e6e6;
   vertical-align: middle;
-  background: #f5f6f7;
+  background: #ffffff;
   font-size: 12px;
 }
 .bettingBoard tr td.waiting {
@@ -2352,7 +2367,7 @@ main .bg {
   padding: 15px 6px;
 }
 .bettingBoard tr td.listName .vs {
-  color: #969696;
+  color: #df1e31;
   margin: 0px 5px;
 }
 .bettingBoard tr td.listName .odds {
@@ -3566,9 +3581,7 @@ main .bg {
 }
 .minetable.bettingRecord.open {
   border: none;
-}
-.minetable.bettingRecord.open tbody {
-  border: solid 2px #df1e31;
+  box-shadow: 0px 2px 5px 0px #00000049, 0px 0px 0px 1px #696969;
 }
 .minetable.bettingRecord.open .arrow {
   transform: translateY(-50%) rotate(-90deg);
@@ -5473,7 +5486,7 @@ main .bg {
   background: #ffffff;
   color: #df1e31;
   border-radius: 3px 3px 0px 0px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 .conversionBox .innerBox {
@@ -5551,7 +5564,7 @@ main .bg {
   text-align: center;
 }
 .signupWindow .signupbar span {
-  font-size: 16px;
+  font-size: 14px;
   color: #df1e31;
   line-height: 54px;
   font-weight: bold;
@@ -5669,7 +5682,7 @@ main .bg {
   background: #ffffff;
   color: #de1e30;
   border-radius: 3px 3px 0px 0px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 .controlBox .innerBox1 {
@@ -5892,7 +5905,7 @@ main .bg {
   line-height: 50px;
   color: #df1e31;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
 }
 .norbetting .norcancelbtn {
   position: absolute;
@@ -6047,7 +6060,7 @@ main .bg {
 .norbettingCheck .barname {
   line-height: 50px;
   color: #df1d30;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 .norbettingCheck .checkCancelBtn {
@@ -6756,7 +6769,7 @@ main .bg {
   position: relative;
   text-align: center;
   line-height: 42px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 .calculator .calbar button {
@@ -7038,7 +7051,7 @@ main .bg {
   text-align: center;
 }
 .unLogin .topBar span {
-  font-size: 16px;
+  font-size: 14px;
   color: #de1e30;
   line-height: 54px;
   font-weight: bold;
@@ -8433,7 +8446,7 @@ main .bg {
 }
 .minetopfix .fixbar ul li:hover, .minetopfix .fixbar ul li:active, .minetopfix .fixbar ul li.active {
   color: #df1e31;
-  background: #e3e3e3;
+  background: #f1f1f1;
 }
 .minetopfix .fixbar ul li:hover::before, .minetopfix .fixbar ul li:active::before, .minetopfix .fixbar ul li.active::before {
   content: "";
@@ -8537,15 +8550,16 @@ main .bg {
 }
 .minetopfix .midword p {
   display: inline-block;
-  font-weight: bold;
   margin: 20px 10px 0px;
-  font-size: 17px;
-  color: #1b1b1b;
+  font-size: 15px;
+  color: #737373;
 }
 .minetopfix .midword p span {
   display: block;
   padding-top: 13px;
   font-size: 17px;
+  font-weight: bold;
+  color: #777777;
 }
 .minetopfix .midword .topline {
   display: inline-block;
@@ -8574,7 +8588,7 @@ main .bg {
 .changePasswordWindow {
   display: none;
   position: fixed;
-  width: 390px;
+  width: 350px;
   height: auto;
   left: 50%;
   top: 30%;
@@ -8593,9 +8607,10 @@ main .bg {
   text-align: center;
 }
 .changePasswordWindow .topbar span {
-  font-size: 16px;
+  font-size: 14px;
   color: #df1e31;
   line-height: 50px;
+  padding-left: 20px;
   font-weight: bold;
 }
 .changePasswordWindow .topbar button {
@@ -8634,19 +8649,19 @@ main .bg {
   height: 160px;
   background: #ededed;
   border-radius: 0px 0px 3px 3px;
-  padding: 30px 0px;
+  padding: 20px 0px;
 }
 .changePasswordWindow .box div {
-  width: 81%;
+  width: 95%;
   height: 50px;
+  float: left;
   position: relative;
-  margin: 0px auto;
 }
 .changePasswordWindow .box div:last-child {
-  width: auto;
+  width: 500px;
   left: 50%;
   transform: translateX(-50%);
-  margin-top: 15px;
+  margin-top: 20px;
   text-align: center;
 }
 .changePasswordWindow .box div input {
@@ -8663,6 +8678,7 @@ main .bg {
 .changePasswordWindow .box div span {
   line-height: 40px;
   color: #333333;
+  padding-left: 15px;
 }
 .changePasswordWindow .box div button {
   width: 152px;
@@ -8712,9 +8728,10 @@ main .bg {
   text-align: center;
 }
 .cardremind .topbar span {
-  font-size: 16px;
+  font-size: 14px;
   color: #de1e30;
   line-height: 50px;
+  padding-left: 20px;
   font-weight: bold;
 }
 .cardremind .topbar button {
@@ -8802,7 +8819,7 @@ main .bg {
   text-align: center;
 }
 .cardAdd .topbar span {
-  font-size: 16px;
+  font-size: 14px;
   color: #df1e31;
   line-height: 42px;
   font-weight: bold;
