--- a/scss_5/_myself.scss
+++ b/scss_5/_myself.scss
@@ -903,7 +903,7 @@
 
                 &:hover,&:active,&.active {
                     color: #df1e31;
-                    background: #e3e3e3;
+                    background: #f1f1f1;
 
                     &::before {
                         content: "";
@@ -1044,14 +1044,15 @@
 
         p {
             display: inline-block;
-            font-weight: bold;
             margin: 20px 10px 0px;
-            font-size: 17px;
-            color: #1b1b1b;
+            font-size: 15px;
+            color: #737373;
             span {
                 display: block;
                 padding-top: 13px;
                 font-size: 17px;
+                font-weight: bold;
+                color: #777777;
             }
         }
 
@@ -1093,7 +1094,7 @@
 .changePasswordWindow {
     display: none;
     position: fixed;
-    width: 390px;
+    width: 350px;
     height: auto;
     left: 50%;
     top: 30%;
@@ -1114,9 +1115,10 @@
         text-align: center;
 
         span {
-            font-size: 16px;
+            font-size: 14px;
             color: #df1e31;
             line-height: 50px;
+            padding-left: 20px;
             font-weight: bold;
         }
 
@@ -1162,19 +1164,19 @@
         height: 160px;
         background: #ededed;
         border-radius: 0px 0px 3px 3px;
-        padding: 30px 0px;
+        padding: 20px 0px;
 
         div {
-            width: 81%;
+            width: 95%;
             height: 50px;
+            float: left;
             position: relative;
-            margin: 0px auto;
 
             &:last-child {
-                width: auto;
+                width: 500px;
                 left: 50%;
                 transform: translateX(-50%);
-                margin-top: 15px;
+                margin-top: 20px;
                 text-align: center;
             }
 
@@ -1193,6 +1195,7 @@
             span {
                 line-height: 40px;
                 color: #333333;
+                padding-left: 15px;
             }
 
             button {
@@ -1252,9 +1255,10 @@
         text-align: center;
 
         span {
-            font-size: 16px;
+            font-size: 14px;
             color: #de1e30;
             line-height: 50px;
+            padding-left: 20px;
             font-weight: bold;
         }
 
@@ -1357,7 +1361,7 @@
         text-align: center;
 
         span {
-            font-size: 16px;
+            font-size: 14px;
             color: #df1e31;
             line-height: 42px;
             font-weight: bold;
