--- a/scss_5/_rightside.scss
+++ b/scss_5/_rightside.scss
@@ -4,7 +4,7 @@
     height: 850px;
     margin: 15px 0px 0px 10px;
     float: left;
-    overflow: auto;
+    overflow: hidden;
     position: relative;
     z-index: 6;
     scrollbar-width: thin;
@@ -250,8 +250,9 @@
 
     //下大框
     .room {
-        width: 100%;
+        width: 95%;
         height: auto;
+        margin: 10px auto;
 
         //切換按鈕
         .twobut {
@@ -269,15 +270,15 @@
             button {
                 width: 49.5%;
                 height: 100%;
-                background: #dadada;
-                color: #676767;
+                background: #f4f4f4;
+                color: #7f7f7f;
                 font-size: 14px;
                 float: left;
                 border-radius: 3px 3px 0px 0px;
 
                 &:hover,&:active,&.active {
-                    background: #ffffff;
-                    color: #000000;
+                    background: #e6e6e6;
+                    color: #393939;
                 }
 
                 &:last-child {
@@ -332,7 +333,6 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #ffffff;
 
             &::-webkit-scrollbar {
                 width: 5px;
@@ -384,7 +384,7 @@
 
                         .gameName {
                             color: #de1e30;
-                            background: #e6e6e6;
+                            background: #f1f1f1;
                         }
 
                         .games {
@@ -396,6 +396,16 @@
                         height: auto;
                         border-color: #ffffff;
                         background: #ffffff;
+                        position: sticky;
+                        top: 5px;
+                        z-index: 2;
+
+                        &:hover {
+
+                            .gameName {
+                                background: none;
+                            }
+                        }
 
                         &::before {
                             transform: rotate(90deg);
@@ -403,7 +413,7 @@
 
                         .gameName {
                             color: #de1e30;
-                            background: #e6e6e6;
+                            box-shadow: 0px 0px 0px 1px #df1e31 inset;
                         }
 
                         .games {
@@ -438,7 +448,7 @@
                     .games {
                         font-size: 13px;
                         font-weight: bold;
-                        color: #de1e30;
+                        color: #1b1b1b;
                         position: absolute;
                         right: 60px;
                         top: 0px;
@@ -527,7 +537,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #ffffff;
+            background: #e6e6e6;
 
             &::-webkit-scrollbar {
                 width: 5px;
