--- a/scss_5/_table.scss
+++ b/scss_5/_table.scss
@@ -8,10 +8,6 @@
 	background: #ffffff;
 	position: relative;
 
-	&:last-child {
-		margin-bottom: 40px;
-	}
-
 	&::before {
 		content: "";
 		position: absolute;
@@ -102,6 +98,10 @@
 
 				button {
 					background: #ffffff;
+
+					&.disable {
+						background: #efefef;
+					}
 				}
 			}
 		}
@@ -2123,10 +2123,9 @@
     overflow: hidden;
 	margin: 8px auto 0px;
 	border-collapse: inherit;
-	border: solid 1px #c5c5c5;
 
 	&:last-child {
-		margin-bottom: 30px;
+		margin-bottom: 20px;
 	}
 
 	&.fail {
@@ -2153,6 +2152,26 @@
 
 	tr {
 
+		&:nth-of-type(1) {
+
+			td {
+
+				&:nth-of-type(1) {
+					color: #a9a9a9;
+				}
+			}
+		}
+
+		&:nth-of-type(2) {
+
+			td {
+
+				&:nth-of-type(1) {
+					color: #333333;
+				}
+			}
+		}
+
 		td {
 			width: 50%;
 			height: auto;
@@ -2162,7 +2181,7 @@
 			border-width: 0px 0px 1px 0px;
 			border-color: #e6e6e6;
 			vertical-align: middle;
-			background: #f5f6f7;
+			background: #ffffff;
 			font-size: 12px;
 
 			&.waiting {
@@ -2177,7 +2196,7 @@
 				padding: 15px 6px;
 
 				.vs {
-					color: #969696;
+					color: #df1e31;
 					margin: 0px 5px;
 				}
 
@@ -3749,10 +3768,7 @@
 
 		&.open {
 			border: none;
-
-			tbody {
-				border: solid 2px #df1e31;
-			}
+			box-shadow: 0px 2px 5px 0px #00000049,0px 0px 0px 1px #696969;
 
 			.arrow {
 				transform: translateY(-50%) rotate(-90deg);
